# bparb

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  openapi.yaml  pyproject.toml
src/api/: __init__.py  client.py  websocket.py
src/data/: __init__.py  market_data.py
src/risk/: __init__.py  manager.py
src/strategy/: __init__.py  arbitrage.py
